fix: try to fix issue with drag and scrolling on mobile devices
added some css properties to handle drag on touch

--- a/src/components/TaskItem/TaskItem.module.css
+++ b/src/components/TaskItem/TaskItem.module.css
@@ -24,6 +24,7 @@
   color: var(--secondary-color);
   font-size: var(--font-size-4);
   cursor: pointer;
+  touch-action: none;
 }
 
 @media (min-width: 768px) {
